[package]
name = "nft-login"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
chrono = "0.4"
openidconnect = "2.1.0"
rocket = "0.5.0-rc.1"
rocket-include-static-resources = { version = "0.10.0", features=["cache"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.2"
web3 = { version = "0.17.0", default-features = false, features = ["signing"] }
hex = "0.4.3"